--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,11 @@
 == Overview
 
-Clones the FTL repo into the grading hosts /opt
+ftl-injector clones the FTL Repo into an existing environemnt. Originally designed to work with AgnosticD FTL can work with any environment where the appropriate Ansible credentails can be supplied.
 
-TODO: Add logic to create the gradering scrip that will wrap the playbook and
-execute it within the virtualenv.
+=== Stages
+
+. Create grading virtualenv
+. Clone the FTL Repo onto the grader host 
+. Create custom facts about students, course(s), etc
+. Install grader script etc.
+...
